Mark footer meta.items.text and meta.items.href as required
Passing a href by itsef results in an invisible link (no visible text). Passing text by itself results in a link with no href.

Therefore, mark the footer meta.items.text and meta.items.href as required.

--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -23,11 +23,11 @@ params:
     params:
     - name: text
       type: string
-      required: false
+      required: true
       description: List item text in the meta section of the footer.
     - name: href
       type: string
-      required: false
+      required: true
       description: List item href attribute in the meta section of the footer.
     - name: attributes
       type: object
