--- a/src/govuk/components/input/input.yaml
+++ b/src/govuk/components/input/input.yaml
@@ -13,7 +13,7 @@ params:
   description: Type of input control to render. Defaults to "text".
 - name: inputmode
   type: string
-  require: false
+  required: false
   description: Optional value for [inputmode](https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/inputmode).
 - name: value
   type: string
