--- a/src/govuk/components/radios/radios.yaml
+++ b/src/govuk/components/radios/radios.yaml
@@ -306,7 +306,7 @@ examples:
         text: Email
         conditional:
           html: |
-            <label class="govuk-label" for="context-email">Mobile phone number</label>
+            <label class="govuk-label" for="context-email">Email address</label>
             <input class="govuk-input govuk-!-width-one-third" name="context-email" type="text" id="context-email">
       - value: phone
         text: Phone
@@ -392,7 +392,7 @@ examples:
       text: Email
       conditional:
         html: |
-          <label class="govuk-label" for="context-email">Mobile phone number</label>
+          <label class="govuk-label" for="context-email">Email address</label>
           <input class="govuk-input govuk-!-width-one-third" name="context-email" type="text" id="context-email">
     - value: phone
       text: Phone
