--- a/src/govuk/components/notification-banner/notification-banner.yaml
+++ b/src/govuk/components/notification-banner/notification-banner.yaml
@@ -1,40 +1,44 @@
 params:
+- name: text
+  type: string
+  required: true
+  description: If `html` is set, this is not required. Text to use within the notification banner. If `html` is provided, the `text` argument will be ignored.
+- name: html
+  type: string
+  required: true
+  description: If `text` is set, this is not required. HTML to use within the notification banner. If `html` is provided, the `text` argument will be ignored.
 - name: title
   type: string
   required: false
-  description: Custom title text. Defaults to 'Important' ('Success' for success banner and 'Error' for error banner). If `titleHtml` is supplied, this is ignored.
+  description: Title text to use within the notification banner. Defaults to 'Important' ('Success' for success type and 'Error' for error type). If `titleHtml` is supplied, the `title` argument will be ignored.
 - name: titleHtml
   type: string
   required: false
-  description: Custom title HTML. Defaults to 'Important' ('Success' for success banner and 'Error' for error banner).
+  description: Title HTML to use within the notification banner. If `titleHtml` is provided, the `title` argument will be ignored.
 - name: titleHeadingLevel
   type: string
   required: false
   description: Heading level, from 1 to 6. Default is `2`.
-- name: content
-  type: string
-  required: true
-  description: Content for the notification banner. If `contentHtml` is supplied, this is ignored.
-- name: contentHtml
-  type: string
-  required: true
-  description: HTML content for the notification banner.
 - name: type
   type: string
   required: false
-  description: Sets classes and attributes to create a type of notification banner. Accepts `success` or `alert`.
+  description: If `type` is set to `success` or `alert`, the notification banner sets `role` to `alert` and `tabindex` to `-1`, and JavaScript moves the keyboard focus moves to the notification banner when the page loads. If `type` is not set, the notification banner defaults to setting `role` to `region` and using `aria-labelledby` to provide information for users of assistive technologies.
 - name: role
   type: string
   required: false
-  description: Custom role for the notification banner. Defaults to `region` (`alert` for success and error banners).
+  description: Overrides the value of the `role` attribute for the notification banner. Defaults to `region`. If `type` is set to `success` or `error`, defaults to `alert`.
 - name: tabindex
   type: string
   required: false
-  description: Custom tabindex for the notification banner. Not set by default (defaults to `-1` for success and error banners).
-- name: initialFocus
+  description: Overrides the value of the `tabindex` attribute for the notification banner. Not set by default.  If `type` is set to `success` or `error`, defaults to `-1`.
+- name: titleId
   type: string
   required: false
-  description: Sets `data-module="govuk-initial-focus"` for the notification banner which focuses the banner on page load. Not set by default (on by default for success and error banners).
+  description: Overrides the value of the `id` attribute for the title. `id` used by the `aria-labelledby` attribute on the notification banner to provide information to users of assistive technologies. `id` defaults to `govuk-notification-banner-title` if `role` is set to `region`. If `type` is set to `success` or `error`, `id` is not rendered by default.
+- name: initialFocus
+  type: boolean
+  required: false
+  description: Moves keyboard focus to the notification banner when the page loads. Defaults to `false`. If `type` is set to `success` or `error`, defaults to `true`.
 - name: classes
   type: string
   required: false
@@ -47,19 +51,29 @@ params:
 examples:
 - name: default
   data:
-    content: You have 9 days to send a response.
-- name: with content as html
+    text: You have 9 days to send a response.
+- name: with text as html
   data:
-    contentHtml: |
+    html: |
       <h3 class="govuk-heading-m">This publication was withdrawn on 7 March 2014</h3><p>Archived and replaced by the <a href="#">new planning guidance</a> launched 6 March 2014 on an external website</p>
 - name: with type as success
   data:
     type: success
-    content: Email sent to example@email.com
+    text: Email sent to example@email.com
 - name: with type as error
   data:
     type: error
-    content: There was a problem uploading your file. Please try again.
+    text: There was a problem uploading your file. Please try again.
+- name: with a list
+  data:
+    html: |
+      <h3 class="govuk-heading-m">4 files uploaded</h3>
+      <ul class="govuk-list govuk-list--bullet">
+          <li><a href="#">government-strategy.pdf</a></li>
+          <li><a href="#">government-strategy-v2.pdf</a></li>
+          <li><a href="#">government-strategy-v3-FINAL.pdf</a></li>
+          <li><a href="#">government-strategy-v4-FINAL-v2.pdf</a></li>
+      </ul>
 
 # Hidden examples are not shown in the review app, but are used for tests and HTML fixtures
 
@@ -67,63 +81,80 @@ examples:
   hidden: true
   data:
     title: Important information
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
 - name: title as html
   hidden: true
   data:
     titleHtml: <span>Important information</span>
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
 - name: title html as text
   hidden: true
   data:
     title: <span>Important information</span>
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
 - name: custom title heading level
   hidden: true
   data:
     titleHeadingLevel: 3
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
+- name: custom title id
+  hidden: true
+  data:
+    titleId: my-id
+    text: You have 9 days to send a response.
 
-- name: custom content
+- name: custom text
   hidden: true
   data:
-    content: This publication was withdrawn on 7 March 2014.
-- name: content html as text
+    text: This publication was withdrawn on 7 March 2014.
+- name: html as text
   hidden: true
   data:
-    content: <span>This publication was withdrawn on 7 March 2014.</span>
+    text: <span>This publication was withdrawn on 7 March 2014.</span>
 
 - name:  custom role
   hidden: true
   data:
     role: banner
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
+- name:  role overridden to region
+  hidden: true
+  data:
+    type: success
+    role: region
+    text: Email sent to example@email.com-
 - name: custom tabindex
   hidden: true
   data:
     tabindex: "0"
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
+- name: tabindex as false and type as success
+  hidden: true
+  data:
+    type: success
+    tabindex: false
+    text: Email sent to example@email.com
 - name: initialFocus as true
   hidden: true
   data:
     initialFocus: true
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
 - name: initialFocus as false and type as success
   hidden: true
   data:
     type: success
     initialFocus: false
-    content: Email sent to example@email.com
+    text: Email sent to example@email.com
 
 - name: classes
   hidden: true
   data:
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
     classes: app-my-class
 - name: attributes
   hidden: true
   data:
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
     attributes:
       my-attribute: value
 
@@ -131,4 +162,4 @@ examples:
   hidden: true
   data:
     type: some-type
-    content: You have 9 days to send a response.
+    text: You have 9 days to send a response.
