Button - add required fields to examples

--- a/src/govuk/components/button/button.yaml
+++ b/src/govuk/components/button/button.yaml
@@ -146,6 +146,7 @@ examples:
   hidden: true
   data:
     element: button
+    text: Submit
     attributes:
       aria-controls: example-id
       data-tracking-dimension: 123
@@ -153,6 +154,7 @@ examples:
   hidden: true
   data:
     element: a
+    text: Submit
     attributes:
       aria-controls: example-id
       data-tracking-dimension: 123
@@ -160,37 +162,44 @@ examples:
   hidden: true
   data:
     element: input
+    text: Submit
     attributes:
       aria-controls: example-id
       data-tracking-dimension: 123
 - name: classes
   hidden: true
   data:
+    text: Submit
     element: button
     classes: app-button--custom-modifier
 - name: link classes
   hidden: true
   data:
+    text: Submit
     element: a
     classes: app-button--custom-modifier
 - name: input classes
   hidden: true
   data:
+    text: Submit
     element: input
     classes: app-button--custom-modifier
 - name: name
   hidden: true
   data:
+    text: Submit
     element: button
     name: start-now
 - name: type
   hidden: true
   data:
+    text: Submit
     element: button
     type: button
 - name: input type
   hidden: true
   data:
+    text: Submit
     element: input
     type: button
 - name: explicit link
@@ -202,15 +211,18 @@ examples:
 - name: no href
   hidden: true
   data:
+    text: Submit
     element: a
 - name: value
   hidden: true
   data:
+    text: Submit
     element: button
     value: start
 - name: html
   hidden: true
   data:
+    text: Submit
     element: button
     html: Start <em>now</em>
 - name: no data
