--- a/src/govuk/components/warning-text/warning-text.yaml
+++ b/src/govuk/components/warning-text/warning-text.yaml
@@ -34,6 +34,8 @@ examples:
   - name: attributes
     hidden: true
     data:
+      text: You can be fined up to £5,000 if you don’t register.
+      iconFallbackText: Warning
       attributes:
         id: my-warning-text
         data-test: attribute
@@ -46,10 +48,13 @@ examples:
   - name: html
     hidden: true
     data:
+      text: You can be fined up to £5,000 if you don’t register.
+      iconFallbackText: Warning
       html: <span>Some custom warning text</span>
   - name: html as text
     hidden: true
     data:
+      iconFallbackText: Warning
       text: <span>Some custom warning text</span>
   - name: icon fallback text only
     hidden: true
