Footer - add required fields to examples

--- a/src/govuk/components/footer/footer.yaml
+++ b/src/govuk/components/footer/footer.yaml
@@ -347,7 +347,7 @@ examples:
 - name: with navigation item attributes
   data:
     navigation:
-      -
+      - title: Single column list 1
         items:
           - href: '#1'
             text: Navigation item 1
