--- a/src/govuk/components/radios/radios.yaml
+++ b/src/govuk/components/radios/radios.yaml
@@ -2,12 +2,12 @@ params:
 - name: fieldset
   type: object
   required: false
-  description: Options for the fieldset component (e.g. legend).
+  description: Options for the fieldset component (for example legend).
   isComponent: true
 - name: hint
   type: object
   required: false
-  description: Options for the hint component (e.g. text).
+  description: Options for the hint component (for example text).
   isComponent: true
 - name: errorMessage
   type: object
@@ -22,7 +22,7 @@ params:
   - name: classes
     type: string
     required: false
-    description: Classes to add to the form group (e.g. to show error state for the whole group)
+    description: Classes to add to the form group (for example to show error state for the whole group)
 - name: idPrefix
   type: string
   required: false
@@ -834,4 +834,3 @@ examples:
       - value: no
         text: No
         checked: true
-
