--- a/src/govuk/components/textarea/textarea.yaml
+++ b/src/govuk/components/textarea/textarea.yaml
@@ -46,7 +46,7 @@ params:
   - name: classes
     type: string
     required: false
-    description: Classes to add to the form group (e.g. to show error state for the whole group)
+    description: Classes to add to the form group (for example to show error state for the whole group)
 - name: classes
   type: string
   required: false
@@ -214,4 +214,3 @@ examples:
         text: Error message
       hint:
         text: Hint
-
