Rename a cookie banner example
Rename the example to distinguish it from the new link button example.

--- a/src/govuk/components/cookie-banner/cookie-banner.yaml
+++ b/src/govuk/components/cookie-banner/cookie-banner.yaml
@@ -208,7 +208,7 @@ examples:
         - actions:
           - text: This is a link
             href: /link
-  - name: link with button options
+  - name: link with false button options
     hidden: true
     data:
       messages:
